--- a/templates/welcome.yaml
+++ b/templates/welcome.yaml
@@ -1,16 +1,17 @@
 spec:
   templates:
 
-  - name: print-readme
+  - name: welcome-to-orquestra
     parent: generic-task
     inputs:
       parameters:
       - name: path
       - name: command
-        value: bash main_script.sh
+        value: python3 main.py
       artifacts:
       - name: main-script
-        path: /app/main_script.sh
+        path: /app/main.py
         raw:
           data: |
-            cat {{inputs.parameters.path}}
+            from orquestra import welcome
+            welcome()
