--- a/templates/test-template.yaml
+++ b/templates/test-template.yaml
@@ -8,10 +8,10 @@ spec:
       - name: p1
       - name: p2
       - name: command
-        value: bash main_script.sh
+        value: bash main_script.py
       artifacts:
       - name: main-script
-        path: /app/main_script.sh
+        path: /app/main_script.py
         raw:
           data: |
             print(type({{inputs.parameters.p1}}))
